--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
