--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Roboto;
+  /* font-family: Roboto; */
   background: rgb(241, 241, 241);
 }
 
